--- a/Requests.ipynb
+++ b/Requests.ipynb
@@ -51,7 +51,7 @@
    "outputs": [],
    "source": [
     "url     = 'https://coralnet.ucsd.edu/api/token_auth/'\n",
-    "payload = '{ \"username\" : \"*\", \"password\" : *\"}'\n",
+    "payload = '{ \"username\" : \"your_coralnet_username\", \"password\" : your_coralnet_password\"}'\n",
     "headers = {\"Content-type\" : \"application/vnd.api+json\"}\n",
     "coralnet_token = requests.post(url, data = payload, headers = headers).text.split(':\"')[-1][:-2]\n",
     "\n",
