--- a/Requests.ipynb
+++ b/Requests.ipynb
@@ -38,7 +38,7 @@
     "local_path = 'JSON_files\\\\' \n",
     "dropbox_path = '/CoralNet/' \n",
     "\n",
-    "dropbox_token = ''\n",
+    "dropbox_token = 'token_provided_by_dropbox_api'\n",
     "# Connects to our Dropbox account\n",
     "dbx = dropbox.Dropbox(dropbox_token)\n",
     "dbx.users_get_current_account()"
