--- a/Requests.ipynb
+++ b/Requests.ipynb
@@ -128,7 +128,7 @@
     "\n",
     "if you don't already have the other libraries, they can be installed in a similar manner. If you have problems, Google will solve them for you.\n",
     "\n",
-    "Last is a custom library of utilies made by yours truly to assist in getting annotations and checking "
+    "Last is a custom library of utilies made by yours truly to assist in getting annotations and checking the status of the `source`. "
    ]
   },
   {
